<resources>
    <!--default-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="app_name">말해보시개회의실태블릿</string>
    <string name="bottom_nav1_text">회의실</string>
    <string name="bottom_nav2_text">예약관리</string>
    <string name="bottom_nav3_text">프로필</string>
    <string name="detail_info_text">상세정보</string>
    <string name="reserve_text">예약하기</string>
    <string name="room_num_text">수용인원 : </string>
    <string name="room_text">회의실 : </string>
    <string name="register_text">담당자 :</string>
    <string name="date_select_text">날짜 선택</string>
    <string name="time_select_text">시간 선택</string>
    <string name="reservation_complete_text">예약완료</string>
    <string name="not_available_time_text">예약되어있는 시간</string>
    <string name="to_time_text">~</string>
    <string name="enter_conference_name_msg">회의명 입력해주세요</string>
    <string name="enter_officer_msg">담당자를 입력해주세요</string>
    <string name="select_both_date_time_msg">예약 날짜와 시간을 선택해주세요</string>
    <string name="select_date_first_msg">날짜를 먼저 선택해주세요</string>
    <string name="select_start_time_first_msg">시작시간을 먼저 선택해주세요</string>
    <string name="already_reserve_full_msg">해당 시간은 이미 예약이 찼습니다.</string>
    <string name="network_error_msg">네트워크가 연결되어 있지 않습니다</string>
    <string name="reserve_complete_msg">예약되었습니다.</string>
    <string name="reserve_fail_msg">예약을 실패했습니다.</string>
    <string name="select_another_time_msg">해당 시간은 불가합니다. 다른시간을 선택해주세요</string>
    <string name="status_text">현황</string>
    <string name="time_text">시간</string>
    <string name="conference_name_text">회의명</string>
    <string name="officer2_text">담당자</string>
    <string name="network_err_then_load_local_text">네트워크가 끊켜 있습니다. 로컬에서 불러옵니다</string>
    <string name="proceeding_text">진행중</string>
    <string name="reservation_text">예약</string>
    <string name="time_input_text">시간 :</string>
    <string name="content_name_text">회의명 :</string>
    <string name="reservation_cancel_text">예약취소</string>
    <string name="reservation_cancel_failure_text">예약 취소를 실패했습니다.</string>
    <string name="reservation_cancel_success_text">예약이 취소되었습니다.</string>
    <string name="no_text">아니요</string>
    <string name="yes_text">네</string>
    <string name="reservation_cancel_question_text">예약을 취소하시겠습니까?</string>
    <string name="conference_input_name_text">회의명 :</string>
    <string name="select_after_current_time_text">현재시간보다 이후의 시간을 선택해주세요</string>
    <string name="date_input_text">날짜 :</string>
    <string name="register2_text">담당자</string>
    <string name="empty_text">비었음</string>
    <string name="input_business_code_room_code_text">부여받은 회사코드와 회의실 코드를 입력해주세요</string>
    <string name="business_code_text">회사 코드</string>
    <string name="room_code_text">회의실 코드</string>
    <string name="business_code_hint">BUSINESS_CODE_EXAMPLE</string>
    <string name="room_code_hint">1~7</string>
    <string name="enter_text">입장</string>
    <string name="enter_business_code_text">회사코드를 입력해주세요</string>
    <string name="enter_meeting_room_code_text">회의실 코드를 입력해주세요</string>
    <string name="login_error_text">해당 회사 또는 회의실 코드는 존재하지 않습니다.</string>
    <string name="select_reservation_text">예약방법을 선택해주세요</string>
    <string name="qr_code_text">QR 코드</string>
    <string name="anonymous_text">익명</string>
    <string name="login_text">로그인</string>
    <string name="user_id_text">아이디</string>
    <string name="enter_id_pw_text">회원님의 아이디와 패스워드를 입력해주세요</string>
    <string name="user_password_text">패스워드</string>
    <string name="login_fail_text">로그인을 실패했습니다.</string>
    <string name="step1_date_select_text">STEP 1. 날짜 선택</string>
    <string name="step2_start_time_select_text">STEP 2. 시작시간 선택</string>
    <string name="step3_end_time_select_text">STEP 3. 종료시간 선택</string>
    <string name="conference_name_input_text">회의명 입력 :</string>
    <string name="register_input_text">담당자 입력 :</string>
    <string name="reservation_info_text">STEP 순서대로\n클릭해서 예약해주세요</string>
    <string name="sacn_fail_text">스캔을 실패했습니다.</string>
    <string name="scan_success_text">스캔을 성공했습니디.</string>
    <string name="show_user_app_qr_code">사용자 앱 프로필 관리화면의 QR코드를 보여주세요</string>
    <string name="user_not_exist_text">해당유저는 존재하지 않습니다.</string>
    <string name="user_auth_success_text">유저 인증이 성공했습니다.</string>
    <string name="business_code_input_text">회사코드 :</string>
    <string name="meeting_room_input_text">회의실코드 :</string>
    <string name="start_time_text">시작시간</string>
    <string name="end_time_text">종료시간</string>
    <string name="invaild_activity_exception_text">Invalid Activity</string>
    <string name="next_text">다음</string>
    <string name="reserved_time_text">예약된 시간들</string>
    <string name="end_time_input_text">종료시간 :</string>
    <string name="start_time_input_text">시작시간 :</string>
    <string name="step_1_reservation_date_select_text">STEP 1. 예약날짜 선택</string>
    <string name="step_2_start_time_select_text">STEP 2. 시작시간 선택</string>
    <string name="reservation_success_text">예약되었습니다</string>
    <string name="reservation_fail_text">해당 예약시간은 불가능합니다.</string>
    <string name="step_3_input_register_info_text">STEP 3. 정보입력</string>
    <string name="input_start_time_text">시작시간을 입력해주세요</string>
    <string name="input_end_time_text">종료기간을 입력해주세요</string>
    <string name="question_reservation_text">예약하시겠습니까?</string>
    <string name="qr_code_camera_request_text">QR 코드 촬영 재요청</string>
    <string name="question_developer_text">문의 : tmddjs210@naver.com</string>
</resources>