<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.mtjin.free_room_tablet.views.login_reservation.LoginReservationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_white_blue"
        tools:context=".views.code_input.CodeInputActivity">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_16dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toTopOf="@id/gl_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/lottie_login"
            app:lottie_repeatCount="1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_greetings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28dp"
            android:gravity="center"
            android:text="@string/enter_id_pw_text"
            android:textSize="@dimen/text_size_28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_left_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_right_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28dp"
            android:background="@drawable/shape_white_radius_16dp"
            android:drawableStart="@drawable/ic_baseline_person_black_24dp"
            android:drawablePadding="@dimen/padding_8dp"
            android:hint="@string/user_id_text"
            android:text="@={vm.userId}"
            app:layout_constraintEnd_toStartOf="@id/gl_right_vertical"
            app:layout_constraintStart_toEndOf="@id/gl_left_vertical"
            app:layout_constraintTop_toBottomOf="@id/text_greetings" />

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28dp"
            android:background="@drawable/shape_white_radius_16dp"
            android:drawableStart="@drawable/ic_baseline_password_black_24dp"
            android:drawablePadding="@dimen/padding_8dp"
            android:hint="@string/user_password_text"
            android:inputType="textPassword"
            android:text="@={vm.userPw}"
            app:layout_constraintEnd_toStartOf="@id/gl_right_vertical"
            app:layout_constraintStart_toEndOf="@id/gl_left_vertical"
            app:layout_constraintTop_toBottomOf="@id/et_id" />

        <com.skydoves.elasticviews.ElasticButton
            android:id="@+id/btn_enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28dp"
            android:background="@drawable/shape_blue_radius_16dp"
            android:onClick="@{()->vm.requestLogin()}"
            android:text="@string/login_text"
            app:button_duration="200"
            app:button_scale="0.9"
            app:layout_constraintEnd_toStartOf="@id/gl_right_vertical"
            app:layout_constraintStart_toEndOf="@id/gl_left_vertical"
            app:layout_constraintTop_toBottomOf="@id/et_pw" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="@{vm.isLoading() ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>